--- a/compose.yaml
+++ b/compose.yaml
@@ -6,10 +6,12 @@ services:
       - "3000:3000"
     depends_on:
       - mongodb
+      - rabbitmq
     environment:
       - MONGODB_URI=mongodb://mongodb:27017
       - MONGODB_DATABASE=jobsity
       - SERVER_PORT=3000
+      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
 
   mongodb:
     image: mongo:latest
@@ -18,6 +20,15 @@ services:
     volumes:
       - ./db/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
       - mongodb_data:/data/db
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
 
 volumes:
   mongodb_data:
