--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,24 @@
 services:
+  frontend:
+    build:
+      context: ./frontend
+    ports:
+      - "3001:3001"
+    depends_on:
+      - backend
+    environment:
+      - VITE_API_URL=http://backend:3000
+
   backend:
     build:
       context: ./backend
     ports:
       - "3000:3000"
     depends_on:
-      - mongodb
-      - rabbitmq
+      mongodb:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
     environment:
       - MONGODB_URI=mongodb://mongodb:27017
       - MONGODB_DATABASE=jobsity
@@ -29,6 +41,11 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
 
 volumes:
   mongodb_data:
